--- a/Desktop/SIM-2018-master/src/main/resources/fxml/Scene.fxml
+++ b/Desktop/SIM-2018-master/src/main/resources/fxml/Scene.fxml
@@ -3,14 +3,15 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="229.0" prefWidth="360.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sim.simulacion.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="229.0" prefWidth="490.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sim.simulacion.FXMLController">
     <children>
-        <Button layoutX="275.0" layoutY="166.0" onAction="#generarPorConsola" text="Generar" />
+        <Button layoutX="202.0" layoutY="164.0" onAction="#generarPorConsola" text="Generar" />
       <VBox layoutX="14.0" layoutY="48.0" prefWidth="274.0">
          <children>
             <HBox prefWidth="165.0">
@@ -56,5 +57,6 @@
       </VBox>
       <TextField layoutX="109.0" layoutY="23.0" prefHeight="25.0" prefWidth="152.0" text="0" />
       <Label layoutX="14.0" layoutY="27.0" text="Semilla" />
+      <ListView layoutX="274.0" layoutY="15.0" prefHeight="200.0" prefWidth="200.0" />
     </children>
 </AnchorPane>
