--- a/src/main/resources/fxml/GraficoBarras.fxml
+++ b/src/main/resources/fxml/GraficoBarras.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="396.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="sim.simulacion.GraficoBarrasController">
+<AnchorPane id="AnchorPane" prefHeight="396.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sim.simulacion.GraficoBarrasController">
     <stylesheets>
         <URL value="@/styles/Styles.css" />
     </stylesheets>
@@ -19,7 +19,7 @@
          <children>
             <BarChart fx:id="chart" prefHeight="400.0" prefWidth="600.0">
               <xAxis>
-                <CategoryAxis side="BOTTOM" />
+                <CategoryAxis fx:id="chartXAxis" side="BOTTOM" />
               </xAxis>
               <yAxis>
                 <NumberAxis side="LEFT" />
