--- a/Desktop/SIM-2018-master/Desktop/SIM-2018-master/src/main/resources/fxml/Scene.fxml
+++ b/Desktop/SIM-2018-master/Desktop/SIM-2018-master/src/main/resources/fxml/Scene.fxml
@@ -3,15 +3,16 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="sim.simulacion.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="220.0" prefWidth="512.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sim.simulacion.FXMLController">
     <children>
-        <Button layoutX="208.0" layoutY="155.0" onAction="#generarPorConsola" text="Generar" />
-      <VBox layoutX="13.0" layoutY="18.0" prefWidth="274.0">
+        <Button layoutX="207.0" layoutY="154.0" onAction="#generarPorConsola" text="Generar" />
+      <VBox layoutX="14.0" layoutY="46.0" prefWidth="274.0">
          <children>
             <HBox prefWidth="165.0">
                <children>
@@ -54,5 +55,8 @@
             </HBox>
          </children>
       </VBox>
+      <Label layoutX="14.0" layoutY="22.0" text="Semilla" />
+      <TextField layoutX="109.0" layoutY="18.0" text="0" />
+      <ListView layoutX="288.0" layoutY="10.0" prefHeight="200.0" prefWidth="200.0" />
     </children>
 </AnchorPane>
