--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -2,16 +2,18 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="200" prefWidth="320" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.141" fx:controller="sim.simulacion.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="252.0" prefWidth="493.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sim.simulacion.FXMLController">
     <children>
-        <Button layoutX="208.0" layoutY="155.0" onAction="#generarPorConsola" text="Generar" />
-      <VBox layoutX="13.0" layoutY="18.0" prefWidth="274.0">
+        <Button layoutX="122.0" layoutY="163.0" onAction="#generarPorConsola" text="Generar" />
+      <VBox layoutX="14.0" layoutY="55.0" prefWidth="274.0">
          <children>
             <HBox prefWidth="165.0">
                <children>
@@ -54,5 +56,10 @@
             </HBox>
          </children>
       </VBox>
+      <Label layoutX="14.0" layoutY="30.0" text="Semilla" />
+      <TextField fx:id="semilla" layoutX="109.0" layoutY="26.0" />
+      <ListView fx:id="listView1" layoutX="268.0" layoutY="26.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button layoutX="195.0" layoutY="163.0" mnemonicParsing="false" onAction="#siguienteNumero" text="Siguiente" />
+      <CheckBox fx:id="chkMetodo" layoutX="16.0" layoutY="200.0" onAction="#cambiarMetodo" mnemonicParsing="false" text="Metodo Congruencial Multiplicativo" />
     </children>
 </AnchorPane>
