--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
@@ -39,25 +39,21 @@
             <Font name="Bell MT" size="27.0" />
          </font>
       </Label>
-      <CheckBox fx:id="chk_uniforme" layoutX="76.0" layoutY="63.0" mnemonicParsing="false" text="Uniforme" />
-      <CheckBox fx:id="chk_exp" layoutX="168.0" layoutY="63.0" mnemonicParsing="false" text="Exponencial neg." />
-      <CheckBox fx:id="chk_normbox" layoutX="289.0" layoutY="63.0" mnemonicParsing="false" text="Normal Box Muller" />
-      <CheckBox fx:id="chk_normconv" layoutX="105.0" layoutY="102.0" mnemonicParsing="false" text="Normal Convolucion" />
-      <CheckBox fx:id="chk_poisson" layoutX="258.0" layoutY="102.0" mnemonicParsing="false" text="Poisson" />
       <Label alignment="CENTER" layoutX="7.0" layoutY="145.0" prefHeight="17.0" prefWidth="403.0" text="Parametros" textAlignment="CENTER" textFill="#f81111">
          <font>
             <Font name="Bell MT" size="27.0" />
          </font>
       </Label>
-      <TextField fx:id="txt_a" alignment="TOP_LEFT" layoutX="187.0" layoutY="235.0" />
-      <TextField fx:id="txt_b" alignment="TOP_LEFT" layoutX="187.0" layoutY="274.0" />
-      <TextField fx:id="txt_media" alignment="TOP_LEFT" layoutX="187.0" layoutY="311.0" />
-      <TextField fx:id="txt_varianza" alignment="TOP_LEFT" layoutX="187.0" layoutY="343.0" />
+      <TextField fx:id="txt_a" alignment="TOP_LEFT" layoutX="187.0" layoutY="235.0" text="0" />
+      <TextField fx:id="txt_b" alignment="TOP_LEFT" layoutX="187.0" layoutY="274.0" text="0" />
+      <TextField fx:id="txt_media" alignment="TOP_LEFT" layoutX="187.0" layoutY="311.0" text="0" />
+      <TextField fx:id="txt_varianza" alignment="TOP_LEFT" layoutX="187.0" layoutY="343.0" text="0" />
       <Label alignment="TOP_LEFT" layoutX="82.0" layoutY="239.0" text="Intervalo Inferior" />
       <Label alignment="TOP_LEFT" layoutX="82.0" layoutY="278.0" text="Intervalo Superior" />
       <Label alignment="TOP_LEFT" layoutX="82.0" layoutY="315.0" text="Media " />
       <Label alignment="TOP_LEFT" layoutX="82.0" layoutY="343.0" text="Varianza" />
       <Label alignment="TOP_LEFT" layoutX="79.0" layoutY="209.0" prefHeight="17.0" prefWidth="81.0" text="Tamaño Serie" />
-      <TextField fx:id="txt_n" alignment="TOP_LEFT" layoutX="187.0" layoutY="205.0" />
+      <TextField fx:id="txt_n" alignment="TOP_LEFT" layoutX="187.0" layoutY="205.0" text="0" />
+      <ComboBox fx:id="cmb_distribuciones" layoutX="28.0" layoutY="74.0" onAction="#cambiarItem" prefHeight="25.0" prefWidth="392.0" />
     </children>
 </AnchorPane>
