--- a/src/main/resources/fxml/GraficoBarras.fxml
+++ b/src/main/resources/fxml/GraficoBarras.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 
-<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1200.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sim.simulacion.GraficoBarrasController">
+<AnchorPane id="AnchorPane" prefHeight="720.0" prefWidth="1064.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sim.simulacion.GraficoBarrasController">
     <stylesheets>
         <URL value="@/styles/Styles.css" />
     </stylesheets>
@@ -28,17 +28,13 @@
       <Label layoutX="14.0" layoutY="675.0" prefHeight="26.0" text="Cantidad de Intervalos" />
       <TextField fx:id="fieldTamañoMuestra" layoutX="153.0" layoutY="634.0" prefHeight="26.0" />
       <TextField fx:id="fieldCantidadIntervalos" layoutX="153.0" layoutY="670.0" prefHeight="26.0" />
-      <Label fx:id="frecuenciaEsperadaLabel" layoutX="400.0" layoutY="624.0" prefHeight="25.0">
-         <graphic>
-            <Label text="Frecuencia Esperada:" />
-         </graphic>
-      </Label>
-      <Label fx:id="chiObservadoLabel" layoutX="400.0" layoutY="649.0" prefHeight="25.0">
+      <Label fx:id="frecuenciaEsperadaLabel" layoutX="647.0" layoutY="628.0" prefHeight="25.0" />
+      <Label fx:id="chiObservadoLabel" layoutX="647.0" layoutY="653.0" prefHeight="25.0">
          <graphic>
             <Label text="Valor de Chi observado:" />
          </graphic>
       </Label>
-      <Label fx:id="pasoChiLabel" layoutX="400.0" layoutY="674.0" prefHeight="25.0">
+      <Label fx:id="pasoChiLabel" layoutX="647.0" layoutY="678.0" prefHeight="25.0">
          <graphic>
             <Label text="Paso prueba ChiCuadrado:" />
          </graphic>
@@ -46,6 +42,9 @@
       <HBox alignment="TOP_CENTER" layoutY="648.0" />
       <ComboBox fx:id="cmb_distribuciones" layoutX="153.0" layoutY="592.0" prefWidth="150.0" />
       <Label layoutX="14.0" layoutY="596.0" text="Distribución" />
-      <Button fx:id="btn_generar" layoutX="916.0" layoutY="639.0" onAction="#generateFromGenerador" mnemonicParsing="false" prefHeight="62.0" prefWidth="127.0" text="Ejecutar prueba" />
+      <Button fx:id="btn_graficar" layoutX="1031.0" onAction="#generateFromGenerador" layoutY="630.0" mnemonicParsing="false" prefHeight="62.0" prefWidth="127.0" text="Ejecutar prueba" />
+      <Label layoutX="647.0" layoutY="632.0" text="Frecuencia Esperada:" />
+      <Label fx:id="txt_cantIntGraficar" layoutX="319.0" layoutY="641.0" text="Cantidad Intervalos a graficar" />
+      <TextField layoutX="481.0" layoutY="637.0" />
    </children>
 </AnchorPane>
