--- a/src/main/resources/styles/Styles.css
+++ b/src/main/resources/styles/Styles.css
@@ -1,3 +1,6 @@
 .button {
     -fx-font-weight: bold;
 }
+
+.default-color0.chart-bar { -fx-bar-fill: #0077B5; }
+.default-color1.chart-bar { -fx-bar-fill: #E68523; }
