--- a/src/main/resources/fxml/Colas.fxml
+++ b/src/main/resources/fxml/Colas.fxml
@@ -1,31 +1,74 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="513.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sim.simulacion.ColasController">
+<AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sim.simulacion.ColasController">
    <children>
-      <Label alignment="CENTER" layoutY="25.0" prefHeight="31.0" prefWidth="600.0" text="Gestion de colas en un supermercado" textAlignment="CENTER" textFill="#ee0606">
+      <Label alignment="CENTER" layoutY="25.0" prefHeight="31.0" prefWidth="600.0" text="Gestion de colas en un supermercado" textAlignment="CENTER" textFill="#ee0606" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0">
          <font>
             <Font name="Book Antiqua Bold" size="27.0" />
          </font>
       </Label>
-      <Label layoutX="14.0" layoutY="90.0" text="Cantidad de lineas" />
-      <Label layoutX="16.0" layoutY="130.0" text="Mostrar Desde" />
-      <Label layoutX="18.0" layoutY="171.0" text="Mostrar Hasta" />
-      <TextField fx:id="txt_n" layoutX="166.0" layoutY="86.0" text="1" />
-      <TextField fx:id="txt_desde" layoutX="166.0" layoutY="126.0" text="0" />
-      <TextField fx:id="txt_hasta" layoutX="166.0" layoutY="167.0" text="1" />
-      <Button fx:id="btn_simular" layoutX="326.0" layoutY="86.0" mnemonicParsing="false" onAction="#run" prefHeight="70.0" prefWidth="94.0" text="Simular" />
-      <ListView fx:id="list1" layoutX="12.0" layoutY="245.0" prefHeight="242.0" prefWidth="671.0" AnchorPane.topAnchor="245.0" />
-      <Label layoutX="326.0" layoutY="171.0" text="Tiempo Espera prom. Carniceria" />
-      <Label layoutX="326.0" layoutY="204.0" text="Tiempo Espera prom. Fiambreria" />
-      <TextField fx:id="promedio_Carniceria" editable="false" layoutX="526.0" layoutY="167.0" />
-      <TextField fx:id="promedio_Fiambreria" editable="false" layoutX="526.0" layoutY="200.0" />
+      <HBox layoutX="14.0" layoutY="84.0" spacing="50.0">
+         <children>
+            <VBox spacing="15.0">
+               <children>
+                  <HBox>
+                     <children>
+                        <Label prefHeight="26.0" prefWidth="150.0" text="Cantidad de lineas" />
+                        <TextField fx:id="txt_n" prefHeight="26.0" prefWidth="200.0" text="1" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <Label prefHeight="26.0" prefWidth="150.0" text="Mostrar Desde" />
+                        <TextField fx:id="txt_desde" prefHeight="26.0" prefWidth="200.0" text="0" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <Label prefHeight="26.0" prefWidth="150.0" text="Mostrar Hasta" />
+                        <TextField fx:id="txt_hasta" prefHeight="26.0" prefWidth="200.0" text="1" />
+                     </children>
+                  </HBox>
+                  <Button fx:id="btn_simular" mnemonicParsing="false" onAction="#run" prefHeight="26.0" prefWidth="350.0" text="Simular" />
+               </children>
+            </VBox>
+            <VBox spacing="15.0">
+               <children>
+                  <HBox>
+                     <children>
+                        <Label prefHeight="26.0" prefWidth="250.0" text="Tiempo Espera prom. Carniceria" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="promedio_Carniceria" editable="false" prefHeight="26.0" prefWidth="200.0" />
+                     </children>
+                  </HBox>
+                  <HBox>
+                     <children>
+                        <Label prefHeight="26.0" prefWidth="250.0" text="Tiempo Espera prom. Fiambreria" HBox.hgrow="ALWAYS" />
+                        <TextField fx:id="promedio_Fiambreria" editable="false" prefHeight="26.0" prefWidth="200.0" />
+                     </children>
+                  </HBox>
+               </children>
+            </VBox>
+         </children>
+      </HBox>
+      <Pane layoutX="9.0" layoutY="239.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="245.0">
+         <children>
+            <ListView fx:id="list1" prefHeight="550.0" prefWidth="1200.0" />
+         </children>
+      </Pane>
    </children>
+   <padding>
+      <Insets top="5.0" />
+   </padding>
  
 </AnchorPane>
